# openmetadata-duckdb-connector

./: .env.example  .gitignore  README.md  duckdb_dbt.example.yml  duckdb_ingestion.example.yml  duckdb_metadata.example.yml  duckdb_profiler.example.yml
docker/: Dockerfile  docker-compose.yml
duckdb-connector/: pyproject.toml
duckdb-connector/connector/: duckdb_connector.py  duckdb_profiler.py
duckdb-connector/tests/: conftest.py  test_duckdb_connector.py  test_normalize_type.py  test_profiler_helpers.py
