[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duckdb-connector"
version = "0.2.0"
description = "Custom OpenMetadata connector for DuckDB"
readme = { content-type = "text/markdown", text = "Custom OpenMetadata DuckDB connector. Crawls DuckDB schemas, tables, and columns and pushes them as OpenMetadata entities." }
license = { text = "Apache-2.0" }
authors = [{ name = "Luke Nguyen" }]
requires-python = ">=3.10,<4.0"
dependencies = [
    "openmetadata-ingestion~=1.12.0",
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "cachetools",                  # transitive of OM, but its requirement file misses it
    "collate-dbt-artifacts-parser", # required by the dbt workflow
]

[project.urls]
Homepage = "https://open-metadata.org/"

[project.scripts]
duckdb-profile = "connector.duckdb_profiler:main"

[dependency-groups]
dev = [
    "pytest>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["connector"]

[tool.hatch.build.targets.sdist]
include = ["connector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
